# PydeChat

./: pyproject.toml  test.py
src/: pydechat.py
src/auth/: auth.py  exceptions.py  models.py
src/channels/: channels.py  models.py
src/contacts/: contacts.py  models.py
src/utilitarios/: dot_env.py
