[tool.poetry]
name = "pydechat"
version = "0.1.0"
description = ""
authors = ["Edimar de Sá <edimarfreitas95@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = 'pytest test.py -v -x'